# Squares-Helper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  filter.py  settings.conf
src/: CGMString.c  CGMString.h  config.h  fileManager.c  fileManager.h  hashSet.c  hashSet.h  main.c  multithreading.c  multithreading.h  types.h  webAgent-unix.c  webAgent-win.c  webAgent.c  webAgent.h
